update and create lab and patient details add and css add for login and sign up

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,15 +1,46 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS (and SCSS, if configured) file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
+:root{
+    --primary-color: #407BFF;
+    --black-color: #000000;
+    --white-color: #FFFFFF;
+
+    --large-heading: 32px;
+    --large-text: 24px;
+    --medium-text: 20px;
+    --small-text: 16px;
+    --extra-small-text: 14px;
+}
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Noto Sans", serif;
+    letter-spacing: 1px;
+}
+
+a{
+    text-decoration: none;
+    color: var(--black-color);
+}
+
+li{
+    list-style: none;
+}
+
+button{
+    border: none;
+    outline: none;
+}
+
+.primary-btn{
+    border: none;
+    outline: none;
+    background-color: var(--primary-color);
+    color: var(--white-color);
+    font-size: var(--small-text);
+    padding: 8px 20px;
+    border-radius: 10px;
+    cursor: pointer;
+}
