--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,6 +18,7 @@
     box-sizing: border-box;
     font-family: "Noto Sans", serif;
     letter-spacing: 1px;
+    scroll-behavior: smooth;
 }
 
 a{
@@ -34,6 +35,12 @@ button{
     outline: none;
 }
 
+.container {
+    max-width: 1200px;
+    width: 90%;
+    margin: 0 auto;
+}
+
 .primary-btn{
     border: none;
     outline: none;
@@ -43,4 +50,15 @@ button{
     padding: 8px 20px;
     border-radius: 10px;
     cursor: pointer;
+}
+
+.section-heading{
+    font-size: var(--large-heading);
+    color: var(--black-color);
+}
+
+.section-text{
+    text-align: justify;
+    font-size: var(--small-text);
+    opacity: 0.9;
 }
