--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,29 @@
-<h1>Welcome, <%= @user.first_name %>!</h1>
+<%= stylesheet_link_tag "home", "data-turbo-track": "reload" %>
 
-<p>Your email: <%= @user.email %></p>
-<p>Your role: <%= @user.has_role?(:lab) ? "Lab" : "Patient" %></p>
+<div class="container home-container">
+  <div class="home-bg-image">
+    <%=  image_tag "home.png", alt: "image" %>
+  </div>
+  <div class="home-text">
+    <h1 class="section-heading">Welcome to Sample Sure</h1>
 
-<%= link_to 'Go to Profile', profile_path %>
+    <p class="section-text">
+      Your trusted platform for seamless blood sample collection and reporting.
+      SampleSure connects patients with agencies for at-home blood sample collection and report delivery, ensuring a smooth and efficient healthcare experience.
+    </p>
+
+    <a><button class="primary-btn">Lear More</button></a>
+  </div>
+</div>
+
+<%= render "shared/home_banner",
+           banner_text: "Scheduling an appointment",
+           button_text: "Schedule",
+           button_link: "/" %>
+
+<%= render "shared/about_us" %>
+
+<%= render "shared/home_banner",
+           banner_text: "Check service map",
+           button_text: "Check",
+           button_link: "/" %>
