--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -23,8 +23,8 @@
     </div>
     <div class="company-details-container footer-menu-items">
       <h3 class="footer-menu-items-heading">Company</h3>
-      <p class="footer-menu-item">Agents: agent@bloodsure.com</p>
-      <p class="footer-menu-item">Patients: support@bloodsure.com</p>
+      <p class="footer-menu-item">Agents: agent@samplesure.com</p>
+      <p class="footer-menu-item">Patients: support@samplesure.com</p>
       <p class="footer-menu-item">Phone: +91 9988776655</p>
     </div>
   </div>
