fix typo and fix association between agent and address

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,7 +12,7 @@
       SampleSure connects patients with agencies for at-home blood sample collection and report delivery, ensuring a smooth and efficient healthcare experience.
     </p>
 
-    <a><button class="primary-btn">Lear More</button></a>
+    <a><button class="primary-btn">Learn More</button></a>
   </div>
 </div>
 
