--- a/app/views/shared/_about_us.html.erb
+++ b/app/views/shared/_about_us.html.erb
@@ -2,7 +2,7 @@
 
 <div class="container about" id="about">
   <div class="about-us-img">
-    <%= image_tag "about_us.png", alt: "about is image" %>
+    <%= image_tag "patient.jpg", alt: "about is image" %>
   </div>
   <div class="about-us-text">
     <h1 class="section-heading">About Sample Sure</h1>
