fix ui and reset password add

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -5,6 +5,7 @@
     --black-color: #000000;
     --white-color: #FFFFFF;
     --red-color: #FF0000FF;
+    --success: #5be85b;
 
     --large-heading: 32px;
     --large-text: 24px;
