--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -21,8 +21,9 @@ nav{
     }
 }
 
-.navbar .user-name a{
+.navbar .user-name {
     font-size: var(--small-text);
+    cursor: pointer;
 }
 
 .navbar .menu-items {
@@ -30,4 +31,33 @@ nav{
     align-items: center;
     gap: 25px;
     font-size: var(--small-text);
+}
+
+.user-menu {
+    position: relative;
+}
+
+.user-menu-dropdown {
+    display: none;
+    position: absolute;
+    font-size: var(--extra-small-text);
+    top: 100%;
+    right: 0;
+    background-color: white;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    z-index: 10;
+    width: 150px;
+}
+
+.user-menu-dropdown a {
+    display: block;
+    padding: 10px 15px;
+    color: #333;
+    text-decoration: none;
+}
+
+.user-menu.show .user-menu-dropdown {
+    display: block;
 }
