--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -8,4 +8,4 @@
   <%= render 'users/address_form', user: @user %>
 <% end %>
 
-<%= button_to 'Logout', destroy_user_session_path, method: :delete, class: 'logout-button primary-btn' %>
+<%#= button_to 'Logout', destroy_user_session_path, method: :delete, class: 'logout-button primary-btn' %>
