--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,16 +18,16 @@
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <!--    <p class="notice"><%#= notice %></p>-->
+    <!--    <p class="alert"><%#= alert %></p>-->
 
-    <% unless controller_name == 'sessions' || controller_name == 'registrations' %>
+    <% unless controller_name == 'sessions' || controller_name == 'registrations' || (current_user && current_user.has_role?(:lab)) %>
       <%= render 'shared/navbar' %>
     <% end %>
 
     <%= yield %>
 
-    <% unless controller_name == 'sessions' || controller_name == 'registrations' %>
+    <% unless controller_name == 'sessions' || controller_name == 'registrations' || (current_user && current_user.has_role?(:lab)) %>
       <%= render 'shared/footer' %>
     <% end %>
   </body>
