--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -44,7 +44,7 @@ nav{
     top: 100%;
     right: 0;
     background-color: white;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 8px rgba(0, 0, 0, .15);
     border: 1px solid #ddd;
     border-radius: 4px;
     z-index: 10;
