--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -15,10 +15,10 @@
     <div class="company-menu-items-container footer-menu-items">
       <h3 class="footer-menu-items-heading">Company</h3>
       <div class="company-menu-items">
-        <ul class="footer-menu-item"><a>About</a></ul>
-        <ul class="footer-menu-item"><a>FAQs</a></ul>
-        <ul class="footer-menu-item"><a>Privacy Policy</a></ul>
-        <ul class="footer-menu-item"><a>Terms and conditions</a></ul>
+        <ul class="footer-menu-item"><a href="/#about">About</a></ul>
+        <ul class="footer-menu-item"><a href="/faqs">FAQs</a></ul>
+        <ul class="footer-menu-item"><a href="/privacy-policy">Privacy Policy</a></ul>
+        <ul class="footer-menu-item"><a href="/terms-and-conditions">Terms and conditions</a></ul>
       </div>
     </div>
     <div class="company-details-container footer-menu-items">
