--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -24,7 +24,7 @@
         </div>
       <% else %>
         <span class="user-name">
-          <%= link_to "Log In", new_user_session_path %>
+          <%= link_to "Login", new_user_session_path %>
         </span>
       <% end %>
     </div>
