--- a/app/views/shared/_lab_home.html.erb
+++ b/app/views/shared/_lab_home.html.erb
@@ -1,3 +1,5 @@
 <div class="container">
   <h1>Lab dashboard</h1>
+  <%= link_to "Edit Profile", profile_path %>
+  <%= link_to "Log Out", destroy_user_session_path, method: :delete, data: { turbo_method: :delete } %>
 </div>
