--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -5,7 +5,7 @@
     --black-color: #000000;
     --white-color: #FFFFFF;
     --red-color: #FF0000FF;
-    --success: #5be85b;
+    --success-color: #5be85b;
 
     --large-heading: 32px;
     --large-text: 24px;
@@ -117,3 +117,31 @@ button{
         }
     }
 }
+
+/*.form-messages{*/
+/*    height: 10px;*/
+/*    margin-bottom: 20px;*/
+/*}*/
+
+/*.notice{*/
+/*    position: absolute;*/
+/*    top: 20px;*/
+/*    left: 40%;*/
+/*    background-color: var(--white-color);*/
+/*    color: var(--success-color);*/
+/*    font-size: var(--small-text);*/
+/*    padding: 10px 20px;*/
+/*    box-shadow: 0 0 8px rgba(0, 0, 0, .10);*/
+/*}*/
+
+/*.alert{*/
+/*    position: absolute;*/
+/*    top: 5%;*/
+/*    left: 48%;*/
+/*    transform: translate(-50%, -50%);*/
+/*    background-color: var(--white-color);*/
+/*    color: var(--red-color);*/
+/*    font-size: var(--small-text);*/
+/*    padding: 10px 20px;*/
+/*    box-shadow: 0 0 8px rgba(0, 0, 0, .10);*/
+/*}*/
