--- a/app/views/shared/_lab_home.html.erb
+++ b/app/views/shared/_lab_home.html.erb
@@ -1,5 +1,4 @@
-<div class="container">
-  <h1>Lab dashboard</h1>
-  <%= link_to "Edit Profile", profile_path %>
-  <%= link_to "Log Out", destroy_user_session_path, method: :delete, data: { turbo_method: :delete } %>
-</div>
+<%= stylesheet_link_tag "lab", "data-turbo-track": "reload" %>
+
+<%= render "shared/navbar" %>
+<%= render "shared/sidebar" %>
