--- a/app/views/users/_profile_form.html.erb
+++ b/app/views/users/_profile_form.html.erb
@@ -1,42 +1,39 @@
 <%= stylesheet_link_tag "user_profile", "data-turbo-track": "reload" %>
 
-<div class="container user-form">
+<div class="container user-form" style="padding-top: 120px">
   <div class="user-form-container">
     <%= form_with model: @user,
                   url: user_path(@user),
                   method: :put,
                   html: { class: "user-details-form" } do |f| %>
+      <h3 class="section-heading">Profile Details</h3>
 
-    <h3 class="section-heading lab-patient-form-heading">
-      Update Profile Details
-    </h3>
+      <div class="user-field-group">
+        <div class="user-profile-field">
+          <%= f.label :first_name %>
+          <%= f.text_field :first_name %>
+        </div>
 
-    <div class="user-field-group">
-      <div class="user-profile-field">
-        <%= f.label :first_name %>
-        <%= f.text_field :first_name %>
+        <div class="user-profile-field">
+          <%= f.label :last_name %>
+          <%= f.text_field :last_name %>
+        </div>
       </div>
 
-      <div class="user-profile-field">
-        <%= f.label :last_name %>
-        <%= f.text_field :last_name %>
-      </div>
-    </div>
+      <div class="user-field-group">
+        <div class="user-profile-field">
+          <%= f.label :blood_group %>
+          <%= f.select :blood_group, %w[A+ B+ O+ AB+ A- B- O- AB-] %>
+        </div>
 
-    <div class="user-field-group">
-      <div class="user-profile-field">
-        <%= f.label :blood_group %>
-        <%= f.select :blood_group, %w[A+ B+ O+ AB+ A- B- O- AB-] %>
+        <div class="user-profile-field">
+          <%= f.label :phone %>
+          <%= f.telephone_field :phone %>
+        </div>
       </div>
 
-      <div class="user-profile-field">
-        <%= f.label :phone %>
-        <%= f.telephone_field :phone %>
-      </div>
-    </div>
-
-    <% if @user.has_role?(:patient) %>
-       <div class="user-field-group">
+      <% if @user.has_role?(:patient) %>
+        <div class="user-field-group">
           <div class="user-profile-field">
             <%= f.label :dob, 'Date of Birth' %>
             <%= f.date_field :dob %>
@@ -47,10 +44,37 @@
             <%= f.select :gender, %w[Male Female Other] %>
           </div>
         </div>
-    <% end %>
+      <% end %>
 
+      <h3 class="section-heading">Address Details</h3>
+
+      <%= f.fields_for :address do |address_form| %>
+        <div class="user-field-group">
+          <div class="user-profile-field">
+            <%= address_form.label :street %>
+            <%= address_form.text_field :street %>
+          </div>
+
+          <div class="user-profile-field">
+            <%= address_form.label :city %>
+            <%= address_form.text_field :city %>
+          </div>
+        </div>
+
+        <div class="user-field-group">
+          <div class="user-profile-field">
+            <%= address_form.label :state %>
+            <%= address_form.text_field :state %>
+          </div>
+
+          <div class="user-profile-field">
+            <%= address_form.label :zip %>
+            <%= address_form.text_field :zip %>
+          </div>
+        </div>
+      <% end %>
       <div>
-        <%= f.submit "Save Profile Details", class: "primary-btn" %>
+        <%= f.submit "Save Profile", class: "primary-btn" %>
       </div>
     <% end %>
   </div>
