--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
     <link rel="icon" href="/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="/icon.png">
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <script src="https://maps.googleapis.com/maps/api/js?AIzaSyAxETMsDDYF2-IevOAGXP1avzU7j3U2hPU"></script>
     <%= javascript_importmap_tags %>
   </head>
 
@@ -30,7 +31,5 @@
     <% unless controller_name == 'sessions' || controller_name == 'registrations' || (current_user && current_user.has_role?(:lab)) %>
       <%= render 'shared/footer' %>
     <% end %>
-
-  <script src="https://maps.googleapis.com/maps/api/js?key=<%= Rails.application.credentials[:google_maps_api_key] %>&libraries=places&callback=initMap" async defer data-turbolinks-eval="false"></script>
   </body>
 </html>
