--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -87,7 +87,7 @@ button{
 .static-page-heading{
     font-size: var(--large-heading);
     color: var(--primary-color);
-    margin: 30px 0;
+    padding: 30px 0;
 }
 
 .static-page-description{
