appointment schedule and patient samples for lab add

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,13 +8,13 @@
       <ul class="menu-items">
         <a href="/"> <li>Home</li></a>
         <a href="/#about"><li>About Us</li></a>
-        <a><li>Schedule an appointment</li></a>
-        <a><li>Service Map</li></a>
+        <a href="/patient_appointments"><li>Schedule an appointment</li></a>
+        <a href="/service-map"><li>Service Map</li></a>
         <a><li>Contact Us</li></a>
       </ul>
     <% else %>
       <ul class="menu-items">
-        <a href="/"> <li>Patient Samples</li></a>
+        <a href="/patient_samples"> <li>Patient Samples</li></a>
         <a href="/agents"><li>Manage Agents</li></a>
         <a href="/"><li>Manage Reports</li></a>
       </ul>
