--- a/app/views/agents/edit.html.erb
+++ b/app/views/agents/edit.html.erb
@@ -1,13 +1,10 @@
 <%= stylesheet_link_tag "create_agent", "data-turbo-track": "reload" %>
 
 <div class="container lab-page-container">
-  <%= link_to agents_path do %>
-    <%= image_tag "previous.png", alt: "Edit", class: "lab-form-previous-icon"%>
-  <% end %>
+  <%= render 'shared/previous_button', path: agents_path %>
   <h1 class="lab-page-title">Update Agent</h1>
   <%= form_with model: @agent,
                 url: agent_path(@agent),
-                data: { turbo: false },
                 method: :patch do |f| %>
 
     <h3 class="form-sub-heading">Personal Details</h3>
