--- a/app/views/patient_appointments/new.html.erb
+++ b/app/views/patient_appointments/new.html.erb
@@ -1,9 +1,7 @@
 <%= stylesheet_link_tag "new_appointment", "data-turbo-track": "reload" %>
 
 <div class="container lab-page-container">
-  <%= link_to patient_appointments_path do %>
-    <%= image_tag "previous.png", alt: "Back", class: "lab-form-previous-icon"%>
-  <% end %>
+  <%= render 'shared/previous_button', path: patient_appointments_path %>
 
   <h1 class="lab-page-title">Schedule Appointment</h1>
 
